laborations/lab2/testsuite/bad/bad/return_if_both_int_bool.cc
int main() {
        if (true)
                return false;
	else
		return true;
        return 1;
}
